--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "key-code": "0.0.1",
     "lodash": "^4.17.4",
     "pixi.js": "^4.4.4",
+    "underscore": "^1.8.3",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   }
