--- a/package.json
+++ b/package.json
@@ -22,20 +22,21 @@
   },
   "homepage": "https://github.com/kevin-bigler/tetris-js#readme",
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
+    "@babel/polyfill": "^7.4.0",
     "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-stage-2": "^6.22.0",
     "key-code": "0.0.1",
     "lodash": "^4.17.4",
-    "pixi.js": "^4.4.4",
-    "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "pixi.js": "^4.4.4"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.3"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-loader": "^8.0.5",
+    "parcel-bundler": "^1.12.3",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   }
 }
