--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html",
-    "watch": "parcel watch src/index.html",
-    "start:webpack": "webpack-dev-server --content-base src --inline --hot",
-    "build:webpack": "webpack",
-    "watch:webpack": "webpack --watch"
+    "watch": "parcel watch src/index.html"
   },
   "repository": {
     "type": "git",
@@ -23,7 +20,6 @@
   "homepage": "https://github.com/kevin-bigler/tetris-js#readme",
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
-    "babel-plugin-lodash": "^3.2.11",
     "key-code": "0.0.1",
     "lodash": "^4.17.4",
     "pixi.js": "^4.4.4"
@@ -33,10 +29,7 @@
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
-    "babel-loader": "^8.0.5",
-    "parcel-bundler": "^1.12.3",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "babel-plugin-lodash": "^3.3.4",
+    "parcel-bundler": "^1.12.3"
   }
 }
