--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": ["lodash", "@babel/plugin-proposal-class-properties"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "8.10"
+        }
+      }
+    ]
+  ],
+  "plugins": [
+    "lodash",
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
