--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "parcel-bundler": "^1.12.3"
   },
   "jest": {
-    "testMatch": ["src/**/?(*.)+(spec|test).[jt]s?(x)"],
+    "testMatch": ["**/?(*.)+(spec|test).[jt]s?(x)"],
     "testEnvironment": "node",
     "collectCoverageFrom": [
       "**/*.{js,jsx,ts}",
